test-policies-pass/validating/replica-limit-with-params/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: replica-limit-with-params-binding
spec:
  policyName: replica-limit-with-params
  validationActions: [Deny]
  paramRef:
    name: replica-limit-config
    namespace: default
    parameterNotFoundAction: Deny
