test-policies-pass/validating/replica-limit-with-params/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: replica-limit-with-params
spec:
  failurePolicy: Fail
  paramKind:
    apiVersion: v1
    kind: ConfigMap
  matchConstraints:
    resourceRules:
    - apiGroups: ["apps"]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["deployments"]
  validations:
  - expression: "params != null"
    message: "params missing but required to bind to this policy"
  - expression: "object.spec.replicas <= int(params.data.maxReplicas)"
    messageExpression: "'Replica count ' + string(object.spec.replicas) + ' exceeds maximum of ' + params.data.maxReplicas"
    reason: Invalid
